<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover_image"
                android:scaleType="fitXY"
                tools:src="@tools:sample/backgrounds/scenic" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange_primary">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:layout_marginEnd="57dp"
                    android:text="@string/dummyText"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/action_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:contentDescription="@string/favorite_icon"
                    android:src="@drawable/ic_favorite"
                    android:padding="12dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvSummary"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dummyText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOwner"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:text="@string/dummyText" />

            <TextView
                android:id="@+id/tvPlace"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dummyText" />

            <TextView
                android:id="@+id/tvTime"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dummyText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvQuota"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dummyText" />

            <TextView
                android:id="@+id/tvDesc"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dummyText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnRegis"
                android:layout_gravity="center"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btnRegis"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>
